--- a/index.html
+++ b/index.html
@@ -2450,13 +2450,13 @@
                 <div class="staff-card">
                     <div class="staff-info">
                         <h3>Espina, Elpidio S.</h3>
-                        <p>Assistant Developer</p>
+                        <p>Assistant Web Developer</p>
                     </div>
                 </div>
                 <div class="staff-card">
                     <div class="staff-info">
                         <h3>Gatpandan, Kate Lourdes F.</h3>
-                        <p>Developer</p>
+                        <p>Web Developer / Researcher</p>
                     </div>
                 </div>
                 <div class="staff-card">
